RESOLVED FIXED200145
Subpixel fringes around TextIndicator snapshots at non-integral scale factors
https://bugs.webkit.org/show_bug.cgi?id=200145
Summary Subpixel fringes around TextIndicator snapshots at non-integral scale factors
Tim Horton
Reported 2019-07-25 16:46:21 PDT
Subpixel fringes around TextIndicator snapshots at non-integral scale factors
Attachments
Patch (3.52 KB, patch)
2019-07-25 16:46 PDT, Tim Horton
no flags
Tim Horton
Comment 1 2019-07-25 16:46:30 PDT
WebKit Commit Bot
Comment 2 2019-07-25 17:40:32 PDT
Comment on attachment 374923 [details] Patch Clearing flags on attachment: 374923 Committed r247846: <https://trac.webkit.org/changeset/247846>
WebKit Commit Bot
Comment 3 2019-07-25 17:40:33 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2019-07-25 17:41:20 PDT
Russell Epstein
Comment 5 2019-07-30 16:32:08 PDT
It appears that this patch (r247846) broke the following API Test: TestWebKitAPI.DragAndDropTests.ModernWebArchiveType Error: ASSERTION FAILED: !data.contentImageWithHighlight || data.contentImageScaleFactor == snapshotScaleFactor ./page/TextIndicator.cpp(172) : bool WebCore::takeSnapshots(WebCore::TextIndicatorData &, WebCore::Frame &, WebCore::IntRect, const Vector<WebCore::FloatRect> &) 1 0x1833bdca9 WTFCrash 2 0x187f826fb WTFCrashWithInfo(int, char const*, char const*, int) 3 0x18b0c192c WebCore::takeSnapshots(WebCore::TextIndicatorData&, WebCore::Frame&, WebCore::IntRect, WTF::Vector<WebCore::FloatRect, 0ul, WTF::CrashOnOverflow, 16ul> const&) 4 0x18b0bcd8d WebCore::initializeIndicator(WebCore::TextIndicatorData&, WebCore::Frame&, WebCore::Range const&, WebCore::FloatSize, bool) 5 0x18b0bc442 WebCore::TextIndicator::createWithRange(WebCore::Range const&, unsigned short, WebCore::TextIndicatorPresentationTransition, WebCore::FloatSize) 6 0x103c77e81 WebKit::WebPage::computeAndSendEditDragSnapshot() 7 0x103c779cf WebKit::WebPage::didConcludeEditDrag() 8 0x103bee809 WebKit::WebDragClient::didConcludeEditDrag() 9 0x18af7b424 WebCore::DragController::performDragOperation(WebCore::DragData const&) 10 0x104022aaa WebKit::WebPage::performDragControllerAction(WebKit::DragControllerAction, WebCore::DragData const&, WebKit::SandboxExtension::Handle&&, WebKit::SandboxExtension::HandleArray&&) 11 0x1040f0538 void IPC::callMemberFunctionImpl<WebKit::WebPage, void (WebKit::WebPage::*)(WebKit::DragControllerAction, WebCore::DragData const&, WebKit::SandboxExtension::Handle&&, WebKit::SandboxExtension::HandleArray&&), std::__1::tuple<WebKit::DragControllerAction, WebCore::DragData, WebKit::SandboxExtension::Handle, WebKit::SandboxExtension::HandleArray>, 0ul, 1ul, 2ul, 3ul>(WebKit::WebPage*, void (WebKit::WebPage::*)(WebKit::DragControllerAction, WebCore::DragData const&, WebKit::SandboxExtension::Handle&&, WebKit::SandboxExtension::HandleArray&&), std::__1::tuple<WebKit::DragControllerAction, WebCore::DragData, WebKit::SandboxExtension::Handle, WebKit::SandboxExtension::HandleArray>&&, std::__1::integer_sequence<unsigned long, 0ul, 1ul, 2ul, 3ul>) 12 0x1040ed730 void IPC::callMemberFunction<WebKit::WebPage, void (WebKit::WebPage::*)(WebKit::DragControllerAction, WebCore::DragData const&, WebKit::SandboxExtension::Handle&&, WebKit::SandboxExtension::HandleArray&&), std::__1::tuple<WebKit::DragControllerAction, WebCore::DragData, WebKit::SandboxExtension::Handle, WebKit::SandboxExtension::HandleArray>, std::__1::integer_sequence<unsigned long, 0ul, 1ul, 2ul, 3ul> >(std::__1::tuple<WebKit::DragControllerAction, WebCore::DragData, WebKit::SandboxExtension::Handle, WebKit::SandboxExtension::HandleArray>&&, WebKit::WebPage*, void (WebKit::WebPage::*)(WebKit::DragControllerAction, WebCore::DragData const&, WebKit::SandboxExtension::Handle&&, WebKit::SandboxExtension::HandleArray&&)) 13 0x10408928b void IPC::handleMessage<Messages::WebPage::PerformDragControllerAction, WebKit::WebPage, void (WebKit::WebPage::*)(WebKit::DragControllerAction, WebCore::DragData const&, WebKit::SandboxExtension::Handle&&, WebKit::SandboxExtension::HandleArray&&)>(IPC::Decoder&, WebKit::WebPage*, void (WebKit::WebPage::*)(WebKit::DragControllerAction, WebCore::DragData const&, WebKit::SandboxExtension::Handle&&, WebKit::SandboxExtension::HandleArray&&)) 14 0x10407950e WebKit::WebPage::didReceiveWebPageMessage(IPC::Connection&, IPC::Decoder&) 15 0x104025988 WebKit::WebPage::didReceiveMessage(IPC::Connection&, IPC::Decoder&) 16 0x102e9a7c9 IPC::MessageReceiverMap::dispatchMessage(IPC::Connection&, IPC::Decoder&) 17 0x103c0fa2d WebKit::WebProcess::didReceiveMessage(IPC::Connection&, IPC::Decoder&) 18 0x102e2dcf9 IPC::Connection::dispatchMessage(IPC::Decoder&) 19 0x102e26a7b IPC::Connection::dispatchMessage(std::__1::unique_ptr<IPC::Decoder, std::__1::default_delete<IPC::Decoder> >) 20 0x102e2e803 IPC::Connection::dispatchOneIncomingMessage() 21 0x102e4cd9b IPC::Connection::enqueueIncomingMessage(std::__1::unique_ptr<IPC::Decoder, std::__1::default_delete<IPC::Decoder> >)::$_11::operator()() 22 0x102e4ccb9 WTF::Detail::CallableWrapper<IPC::Connection::enqueueIncomingMessage(std::__1::unique_ptr<IPC::Decoder, std::__1::default_delete<IPC::Decoder> >)::$_11, void>::call() 23 0x1833eaaea WTF::Function<void ()>::operator()() const 24 0x1834558e3 WTF::RunLoop::performWork() 25 0x183456cce WTF::RunLoop::performWork(void*) 26 0x10c742be1 __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ 27 0x10c742463 __CFRunLoopDoSources0 28 0x10c73cb1f __CFRunLoopRun 29 0x10c73c302 CFRunLoopRunSpecific 30 0x102888044 -[NSRunLoop(NSRunLoop) runMode:beforeDate:] 31 0x1028881e4 -[NSRunLoop(NSRunLoop) run] ERROR: Failed to load accessibility bundle at /Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/Library/CoreSimulator/Profiles/Runtimes/iOS.simruntime/Contents/Resources/RuntimeRootSystem/Library/AccessibilityBundles/WebProcessLoader.axbundle: (null) /Volumes/Data/slave/ios-simulator-12-debug/build/Source/WebKit/WebProcess/cocoa/WebProcessCocoa.mm(331) : void WebKit::registerWithAccessibility() TestWebKitAPI.DragAndDropTests.ModernWebArchiveType Timeout
Ryan Haddad
Comment 6 2019-07-31 09:30:37 PDT
https://trac.webkit.org/changeset/248028/webkit was landed to address the test failure.
Note You need to log in before you can comment on or make changes to this bug.