Source/WebCore/page/FrameSnapshotting.h
@@ -47,7 +47,8 @@ enum {
     SnapshotOptionsInViewCoordinates = 1 << 2,
     SnapshotOptionsForceBlackText = 1 << 3,
     SnapshotOptionsPaintSelectionAndBackgroundsOnly = 1 << 4,
-    SnapshotOptionsPaintEverythingExcludingSelection = 1 << 5
+    SnapshotOptionsPaintEverythingExcludingSelection = 1 << 5,
+    SnapshotOptionsPaintWithIntegralScaleFactor = 1 << 6,
 };
 typedef unsigned SnapshotOptions;
 
